# Goofy

./: Cargo.toml  README.md
src/: main.rs
src/Goofy_toml/: goofy_toml.rs  mod.rs  package.rs
