[package]
name = "Goofy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Qmmc = { path = "../Qmmc" }

colored = "2.1.0"
lazy_static = "1.4.0"
inkwell = { version = "0.4.0", features = ["llvm10-0"] }
clap = { version = "4.5.4" }
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
